# linux-system-programming

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Makefile  README.md
proc/: fork_and_waitpid.c
process/: fork_and_waitpid.c
thread/: pthread_create.c
